# GeneralsGameCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/CompatLib/: CMakeLists.txt
GeneralsMD/Code/CompatLib/Include/: d3dx8.h  d3dx8core.h  d3dx8math.h  d3dx8tex.h  dinput.h  file_compat.h  gdi_compat.h  keyboard_compat.h  memory_compat.h  module_compat.h  string_compat.h  tchar_compat.h  thread_compat.h  time_compat.h  types_compat.h  wchar_compat.h  windows_compat.h  wnd_compat.h
GeneralsMD/Code/CompatLib/Include/GameSpy/GP/: GP.h
GeneralsMD/Code/CompatLib/Include/GameSpy/Peer/: Peer.h
GeneralsMD/Code/CompatLib/Include/GameSpy/ghttp/: ghttp.h
GeneralsMD/Code/CompatLib/Source/: d3dx8_compat.cpp  d3dx8math.cpp  module_compat.cpp  string_compat.cpp  thread_compat.cpp  time_compat.cpp  wchar_compat.cpp  wnd_compat.cpp
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/Common/: AsciiString.h  AudioEventInfo.h  BezierSegment.h  BodyModuleTypes.h  BorderColors.h  CRC.h  CRCDebug.h  CopyProtection.h  CriticalSection.h  Debug.h  Dict.h  GameAudio.h  GameCommon.h  GameEngine.h  GameLOD.h  GameMemory.h  GameState.h  GameType.h  KindOfTypes.h  Language.h  MessageStream.h  ModelState.h  NameKeyGenerator.h  PerfTimer.h  Player.h  QuickTrig.h  STLTypedefs.h  StackDump.h  TerrainVisualTypes.h  ThingSort.h  ThingTemplate.h  UnicodeString.h  Xfer.h
GeneralsMD/Code/GameEngine/Include/GameClient/: AnimateWindowManager.h  ControlBar.h  Drawable.h  GadgetListBox.h  GadgetSlider.h  GameWindow.h  InGameUI.h  LanguageFilter.h  ParticleSys.h  ShellHooks.h  WindowVideoManager.h
GeneralsMD/Code/GameEngine/Include/GameLogic/: AI.h  AIGuard.h  AIPathfind.h  Damage.h  GhostObject.h  PartitionManager.h  WeaponSet.h
GeneralsMD/Code/GameEngine/Include/GameLogic/Module/: AIUpdate.h  BattlePlanUpdate.h  BodyModule.h  PhysicsUpdate.h
GeneralsMD/Code/GameEngine/Include/GameNetwork/: DownloadManager.h  LANAPI.h
GeneralsMD/Code/GameEngine/Include/GameNetwork/GameSpy/: PeerDefs.h
GeneralsMD/Code/GameEngine/Include/GameNetwork/WOLBrowser/: WebBrowser.h
GeneralsMD/Code/GameEngine/Include/Precompiled/: PreRTS.h
GeneralsMD/Code/GameEngine/Source/Common/: CommandLine.cpp  Dict.cpp  DiscreteCircle.cpp  GameEngine.cpp  GameLOD.cpp  GlobalData.cpp  MiniLog.cpp  PerfTimer.cpp  RandomValue.cpp  Recorder.cpp  UserPreferences.cpp
GeneralsMD/Code/GameEngine/Source/Common/Audio/: AudioEventRTS.cpp  DynamicAudioEventInfo.cpp  GameAudio.cpp  GameSounds.cpp
GeneralsMD/Code/GameEngine/Source/Common/Bezier/: BezFwdIterator.cpp  BezierSegment.cpp
GeneralsMD/Code/GameEngine/Source/Common/RTS/: Player.cpp  PlayerList.cpp
GeneralsMD/Code/GameEngine/Source/Common/System/: ArchiveFile.cpp  AsciiString.cpp  Compression.cpp  DataChunk.cpp  Debug.cpp  DebugUnix.cpp  Directory.cpp  FunctionLexicon.cpp  GameMemory.cpp  LocalFile.cpp  MemoryInit.cpp  QuotedPrintable.cpp  RAMFile.cpp  Registry.cpp  RegistryUnix.cpp  StackDump.cpp  StreamingArchiveFile.cpp  SubsystemInterface.cpp  Trig.cpp  UnicodeString.cpp  XferCRC.cpp  encrypt.cpp
GeneralsMD/Code/GameEngine/Source/Common/Thing/: ThingTemplate.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/: Drawable.cpp  GameClient.cpp  GameText.cpp  GlobalLanguage.cpp  InGameUI.cpp  LanguageFilter.cpp  MapUtil.cpp  SelectionInfo.cpp  Snow.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/: AnimateWindowManager.cpp  GameFont.cpp  GameWindow.cpp  GameWindowManager.cpp  HeaderTemplate.cpp  (+4 more)
GeneralsMD/Code/GameEngine/Source/GameNetwork/: ConnectionManager.cpp  DownloadManager.cpp  FirewallHelper.cpp  GUIUtil.cpp  IPEnumeration.cpp  LANAPI.cpp  LANAPICallbacks.cpp  NAT.cpp  NetPacket.cpp  Network.cpp  Transport.cpp  udp.cpp
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
GeneralsMD/Code/GameEngineDevice/Include/OpenALAudioDevice/: OpenALAudioManager.h  OpenALAudioStream.h
GeneralsMD/Code/GameEngineDevice/Source/MilesAudioDevice/: MesAudioCache.h  MilesAudioCache.cpp  MilesAudioCache.h  MilesAudioManager.cpp
GeneralsMD/Code/GameEngineDevice/Source/OpenALAudioDevice/: OpenALAudioCache.cpp  OpenALAudioCache.h  OpenALAudioManager.cpp  OpenALAudioStream.cpp
GeneralsMD/Code/Libraries/: CMakeLists.txt
GeneralsMD/Code/Libraries/Include/Lib/: BaseType.h
GeneralsMD/Code/Libraries/Include/rts/: profile.h
GeneralsMD/Code/Libraries/Source/Compression/: CMakeLists.txt  CompressionManager.cpp
GeneralsMD/Code/Libraries/Source/Debug/: debug_debug.cpp  debug_except.cpp
GeneralsMD/Code/Libraries/Source/EABrowserDispatch/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/profile/: internal.h  internal_funclevel.h  profile.cpp  profile.h  profile_funclevel.cpp  profile_funclevel.h  profile_highlevel.h
GeneralsMD/Code/Main/: SDL3Main.cpp  SDL3Main.h  WinMain.cpp  WinMain.h
GeneralsMD/Code/Tests/: CMakeLists.txt  FastFloatTest.cpp  TestMain.cpp  TestString.cpp
GeneralsMD/Code/Tools/Autorun/: Locale_API.cpp  Utils.cpp  autorun.cpp
GeneralsMD/Code/Tools/CRCDiff/: CMakeLists.txt  CRCDiff.cpp  KVPair.cpp
GeneralsMD/Code/Tools/Compress/: CMakeLists.txt  Compress.cpp
GeneralsMD/Code/Tools/GUIEdit/Source/: EditWindow.cpp  GUIEdit.cpp  GUIEditWindowManager.cpp  HierarchyView.cpp  LayoutScheme.cpp  Properties.cpp  Save.cpp  WinMain.cpp
GeneralsMD/Code/Tools/ImagePacker/Source/: ImagePacker.cpp  TexturePage.cpp
GeneralsMD/Code/Tools/PATCHGET/: CHATAPI.CPP  DownloadManager.h
GeneralsMD/Code/Tools/WW3D/max2w3d/: MeshDeform.h  MeshDeformData.h  MeshDeformDefs.h  MeshDeformSave.h  MeshDeformSaveSet.h  MeshDeformSet.h  MeshDeformUndo.h
GeneralsMD/Code/Tools/WorldBuilder/include/: CUndoable.h  GroveTool.h  wbview3d.h
GeneralsMD/Code/Tools/WorldBuilder/src/: DrawObject.cpp  GlobalLightOptions.cpp  GroveTool.cpp  MainFrm.cpp  MeshMoldTool.cpp  ObjectPreview.cpp  SelectMacrotexture.cpp  ShadowOptions.cpp  WBHeightMap.cpp  WHeightMapEdit.cpp  WorldBuilder.cpp  WorldBuilderView.cpp  wbview3d.cpp
(+431 files in other folders)
