file(GLOB_RECURSE SOURCES_WWLIB
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.CPP
)

# Remove Debug.cpp from the common sources for UNIX
list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/regexpr.cpp)
if(UNIX)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/ddraw.cpp)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/dib.cpp)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/dsurface.cpp)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/keyboard.cpp)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/mpu.cpp)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/msgloop.cpp)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/rcfile.cpp)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/registry.cpp)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/systimer.cpp)
    list(REMOVE_ITEM SOURCES_WWLIB ${CMAKE_CURRENT_SOURCE_DIR}/WWCOMUtil.cpp)
endif()

add_library(WWLib STATIC ${SOURCES_WWLIB})

target_link_libraries(WWLib PUBLIC
    WWDebug
)

target_link_libraries(WWLib PRIVATE
    gnu_regex
)